# mogo_ekf

mogo_filter_v1.0/: readme.txt  result.txt
mogo_filter_v1.0/devel/: .catkin  .rosinstall
mogo_filter_v1.0/devel/lib/ekf/: ekf_offline_test  ekf_ros_test
mogo_filter_v1.0/devel/lib/pkgconfig/: ekf.pc
mogo_filter_v1.0/devel/share/ekf/cmake/: ekfConfig.cmake
mogo_filter_v1.0/src/mogo_filter/: CMakeLists.txt
mogo_filter_v1.0/src/mogo_filter/include/: ekf_base.hpp  ekf_param.hpp  ekf_struct.hpp
mogo_filter_v1.0/src/mogo_filter/src/: ekf.h  ekf_base_impl.cpp  ekf_calc_fd.cpp  ekf_calc_qd.cpp  ekf_data_loader.cpp  ekf_initialization.cpp  ekf_predict.cpp  ekf_run copy.cpp  ekf_run.cpp  ekf_state_evaluation.cpp  ekf_update.cpp
mogo_filter_v1.0/src/mogo_filter/tester/: draw_result.m  ekf_offline_test.cpp  ekf_ros_test.cpp
mogo_filter_v1.0/src/mogo_filter/utils/: coord_utils.hpp  print_utils.hpp  quat_utils.hpp  vec_utils.hpp
